# PiNeedle

./: MATH.md  README.md  cli.md  examples.md  knitting_vs_crochet_demo.py  pyproject.toml
.github/workflows/: ci.yml
pineedle/: __init__.py  ascii_format.py  cli.py  exporters.py  quickexample.py  recipes.py  utils.py
pistitch/: __init__.py  ascii_format.py  cli.py  exporters.py  patterns.py  quickexample.py  recipes.py  sizing.py  utils.py
tests/: test_basic.py  test_basic_stitches.py  test_knitting_vs_crochet.py  test_metric_sizing.py  test_recipes.py  test_text_export.py
