[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pineedle"
version = "0.1.0"
description = "Generating knitting & crochet patterns"
readme = "README.md"
authors = [ { name = "RAC" } ]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["pineedle*"]

[project.scripts]
pineedle = "pineedle.cli:main"

[project.optional-dependencies]
all = ["svgwrite", "Pillow", "reportlab"]
